Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132912

[REG 6.8.1->6.9.0 beta1&2](Windows/Linux X11) Designer crashes when dragging OpenGLWidget, QQuickWidget or QWebEngineView to canvas

XMLWordPrintable

    • Linux/X11, Windows
    • 1accd2421 (dev), 3bcc785d0 (6.9)

      Install Qt 6.9.0 beta2 (or beta1) Windows binaries, include Extensions-QtWebEngine, reproduces with all Windows desktop binaries (LLVM-MinGW, MinGW and MSVC2022). Windows on arm not tested.

      Launch Qt Widgets Designer, and create new canvas (with buttons), scroll down the item view on left, and drag OpenGLWidget, QQuickWidget or QWebEngineView to canvas. Widgets Designer UI goes completely white losing all items and then application disappears. No log prints visible even is app is started from command prompt. Other components can be dragged to canvas without issues

        1. qtbug132912_diag.diff
          2 kB
        2. qtbug132912_log.txt
          2 kB
        3. qtbug132912_stack.txt
          40 kB
        4. qtbug132912_valgrind.txt
          273 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: